refactor: Ajustando regras para cadastro de nova consulta.
