# src/http/controller/appointment/registerAppointment.ts
@@ -30,9 +30,14 @@ export async function registerAppointmentController(req: Request, res: Response,
             html: `
                 <h3>Olá, ${patient.name}</h3>
                 <p>Sua consulta foi agendada com sucesso!</p>
-                <p><strong>Dia:</strong> ${appointmentDateTime.toLocaleDateString()}</p>
+                <p><strong>Data:</strong> ${appointmentDateTime.toLocaleDateString()}</p>
                 <p><strong>Hora:</strong> ${appointmentDateTime.toLocaleTimeString()}</p>
                 <p><strong>Médico:</strong> ${doctorName}</p>
+                <br>
+                <p><strong>Observação:</strong> ${observation}</p>
+                <br>
+                <p>Atenciosamente,</p>
+                <p>Equipe Agenda_Med</p>
             `,
         });
 
